# hsrb_kinematics

./: README.md
hsrb_analytic_ik/: CHANGELOG.rst  CMakeLists.txt  hsrb_ik_plugins.xml  package.xml
hsrb_analytic_ik/include/hsrb_analytic_ik/: hsrb_ik_solver.hpp  hsrc_ik_solver.hpp
hsrb_analytic_ik/src/hsrb_analytic_ik/: bi_golden_section_line_search.hpp  common.hpp  function_adapters.hpp  golden_section_line_search.hpp  hooke_and_jeeves_method2.hpp  hsr_common_ik_solver.cpp  hsr_common_ik_solver.hpp  hsrb_ik_plugins.cpp  hsrb_ik_solver.cpp  hsrc_ik_solver.cpp  matrix2.hpp  robot_function2.hpp  robot_optimizer.hpp  uni_golden_section_line_search.hpp  vector2.hpp
hsrb_analytic_ik/test/: bi_golden_section_line_search-test.cpp  function_adapters-test.cpp  functions_for_testing.hpp  golden_section_line_search-test.cpp  hooke_and_jeeves_method2-test.cpp  hsrb4s.urdf  hsrb_ik_test_driver.cpp  hsrb_ik_test_driver.hpp  hsrc_ik_test_driver.cpp  hsrc_ik_test_driver.hpp  matrix2-test.cpp  robot_function2-test.cpp  vector2-test.cpp
tmc_manipulation_types/: CHANGELOG.rst  CMakeLists.txt  package.xml
tmc_manipulation_types/include/tmc_manipulation_types/: manipulation_types.hpp
tmc_robot_kinematics_model/: CHANGELOG.rst  CMakeLists.txt  package.xml
tmc_robot_kinematics_model/include/tmc_robot_kinematics_model/: ik_solver.hpp  numeric_ik_solver.hpp  pinocchio_wrapper.hpp  robot_kinematics_model.hpp  tarp3_wrapper.hpp
tmc_robot_kinematics_model/src/: numeric_ik_solver.cpp  pinocchio_wrapper.cpp  tarp3_wrapper.cpp
tmc_robot_kinematics_model/test/: kinematics_model-test.hpp  pinocchio_wrapper-test.cpp  stanford.urdf  test_numeric_ik_urdf.cpp
